--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vercel dev"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.7.0"
   }
 }
